# AAA

./: .gitignore  CMakeLists.txt  Makefile  README.md
data/: high_locality_seq.txt  uniform_random_seq.txt
include/: BeladyCache.h  FIFOCache.h  LRUCache.h  NaiveLRU.h  SLRU.h
results/: hit_miss_ratios.csv  scalability.csv
scripts/: generate_combined_plot.py  generate_plots.py  generate_testcases.py
src/: BeladyCache.cpp  FIFOCache.cpp  LRUCache.cpp  NaiveLRU.cpp  SLRU.cpp  main.cpp
tests/: test_beladys_anomaly.cpp  test_cache_pollution.cpp
